<resources>
    <string name="app_name" translatable="false">GoodFood</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="bookmark_menu">Bookmark</string>
    <string name="account_menu">Account</string>
    <string name="loading_msg">Loading...</string>

    <string name="home_category_vegan">Vegan</string>
    <string name="home_category_drink">Drink</string>
    <string name="home_category_dessert">Dessert</string>
    <string name="home_category_salad">Salad</string>
    <string name="home_category_soup">Soup</string>

    <string name="name_app" translatable="false">Good Food</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="add_to_fav_btn">Add to fav</string>
    <string name="details_servings">Servings</string>
    <string name="details_prep_time">Prep Time</string>
    <string name="details_cook_time">Cook Time</string>
    <string name="details_description">Description</string>

    <string name="small_lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="details_ingredients">Ingredients</string>
    <string name="details_directions">Directions</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="detail_health_score">Health Score</string>

    <string name="error_dialog_title">Ups Something Goes Wrong</string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="deliciously_simple">Deliciously Simple</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="login_second_subtitle">Nutritionally balanced, easy to cook recipes. Quality fresh local ingredients.</string>
    <string name="create_account">Create Account</string>
    <string name="login_text">Already have account? Log in</string>
    <string name="login_register_slogan">Let\'s start making good meals</string>
    <string name="your_email_hint">Your Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account_btn">Create Account</string>
    <string name="terms_of_use">Text of use and Privacy Policy</string>
    <string name="welcome_title">Welcome Back to Good Food</string>
    <string name="log_in_btn">Log in</string>

    <string name="sign_in_error">Can\'t sign in into account. Try again</string>
    <string name="create_account_error">Can\'t create account. Try again</string>
    <string name="bad_request">Bad Request</string>
    <string name="empty_result">Empty Result</string>
    <string name="we_got_a_problem">Houston we have a problem</string>
    <string name="cookBook">My CookBook</string>
    <string name="nothing_empty">NOTHING!!</string>
    <string name="empty_message">Your collection list is empty.</string>

    <string name="remove_from_fav">Remove from fav</string>

    <string name="recipe_added_msg">Recipe was Added</string>
    <string name="recipe_removed_msg">Recipe was Removed</string>
    <string name="pref_them_mode">Select Night or Day mode</string>
    <string name="pref_ui_category">User Interface</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="settings_menu">Settings</string>
    <string name="sign_out_pref">Sign Out</string>
    <string name="transition_key">transition</string>
</resources>
