<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.FirstFragment">
    <ImageView
        android:id="@+id/login_first_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/first_fragment"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/name_app"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/deliciously_simple"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_stat_cooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_cooking"
        style="@style/RoundedBtnShape"
        android:paddingHorizontal="30dp"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>