<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SecondFragment">

    <ImageView
        android:id="@+id/login_second_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/second_fragment"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:id="@+id/login_blur_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape"
        
        android:paddingHorizontal="39dp"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <View
            android:id="@+id/cooking_hat"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/cooking_hat"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/login_second_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/name_app"
            android:layout_below="@+id/cooking_hat"
            android:fontFamily="@font/roboto_bold"
            android:textSize="26sp"/>
        <TextView
            android:id="@+id/login_second_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_second_subtitle"
            android:layout_below="@id/login_second_app_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_second_create_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            style="@style/WhiteRoundedBtn"
            android:layout_below="@id/login_second_subtitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:theme="@style/WhiteRoundedBtn"/>
        <TextView
            android:id="@+id/login_second_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_second_create_account_btn"
            android:text="@string/login_text"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="18dp"
            android:textSize="14sp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>