<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bookmark.BookmarkFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:layout_scrollFlags="scroll"
            app:title="@string/cookBook"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:titleTextColor="@color/colorPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/bookmark_empty"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <View
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_empty"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing_empty"
                android:fontFamily="@font/roboto_italic"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textColor="#4f83d1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_message"
                android:fontFamily="@font/roboto_italic"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="#4f83d1"/>
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookmark_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>