<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.text.Html"/>
        <variable
            name="recipe"
            type="com.example.goodfood.data.local.entitys.RecipeEntity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.details.DetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detail_appbar"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            app:elevation="0dp"
            android:layout_height="250dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/detail_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:statusBarScrim="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <ImageView
                    android:id="@+id/detail_main_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    android:scaleType="centerCrop"/>
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    android:layout_height="?attr/actionBarSize"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">
                    <TextView
                        android:id="@+id/detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Egg Benedict"
                        android:text="@{recipe.title}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/colorPrimary"/>
                    <TextView
                        android:id="@+id/detail_source_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="New York Times"
                        android:text="@{recipe.sourceName}"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:layout_below="@id/detail_title"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_toLeftOf="@id/detail_add_to_fav_btn"
                        android:layout_alignParentLeft="true"
                        android:textSize="18sp"/>
                    <Button
                        android:id="@+id/detail_add_to_fav_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_fav_btn"
                        android:layout_below="@id/detail_title"
                        android:layout_alignParentEnd="true"
                        android:theme="@style/Button.White"
                        android:textColor="@android:color/black"
                        android:textAllCaps="false"
                        android:background="@drawable/rounded_shape"/>
                    <View
                        android:id="@+id/cross_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/searchGreyColor"
                        android:layout_below="@id/detail_add_to_fav_btn"/>
                    <TextView
                        android:id="@+id/detail_serving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_servings"
                        android:layout_below="@id/cross_line"
                        android:layout_alignParentStart="true"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/detail_line_margin_top"/>
                    <TextView
                        android:id="@+id/detail_serving_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2pp"
                        android:text="@{String.valueOf(recipe.servings)}"
                        android:textAlignment="center"
                        android:layout_below="@id/detail_serving"
                        android:layout_alignEnd="@id/detail_serving"
                        android:layout_alignStart="@id/detail_serving"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"/>

                    <TextView
                        android:id="@+id/detail_prep_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_cook_time"
                        android:layout_below="@id/cross_line"
                        android:layout_centerInParent="true"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/detail_line_margin_top"/>
                    <TextView
                        android:id="@+id/detail_prep_time_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="25m"
                        android:text="@{String.valueOf(recipe.readyInMinutes) + 'm'}"
                        android:textAlignment="center"
                        android:layout_below="@id/detail_prep_time"
                        android:layout_alignEnd="@id/detail_prep_time"
                        android:layout_alignStart="@id/detail_prep_time"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"/>

                    <TextView
                        android:id="@+id/detail_cook_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_health_score"
                        android:layout_below="@id/cross_line"
                        android:layout_alignParentEnd="true"
                        android:textSize="18sp"
                        android:layout_marginTop="@dimen/detail_line_margin_top"/>
                    <TextView
                        android:id="@+id/detail_cook_time_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="20p"
                        android:text="@{String.valueOf(recipe.healthScore) + 'p'}"
                        android:textAlignment="center"
                        android:layout_below="@id/detail_cook_time"
                        android:layout_alignEnd="@id/detail_cook_time"
                        android:layout_alignStart="@id/detail_cook_time"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"/>
                    <TextView
                        android:id="@+id/details_description_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_description"
                        android:textSize="18sp"
                        android:layout_below="@id/detail_cook_time_data"
                        android:layout_marginTop="@dimen/detail_line_margin_top"/>
                    <TextView
                        android:id="@+id/details_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/small_lorem"
                        android:textColorLink="@android:color/black"
                        app:htmlText="@{recipe.summary}"
                        android:layout_marginTop="6dp"
                        android:layout_below="@id/details_description_title"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                </RelativeLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/detail_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:background="@color/searchGreyColor">
                </com.google.android.material.tabs.TabLayout>
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/detail_viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/detail_loading_progress"
            android:visibility="gone"
            layout="@layout/loading_view"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>